Fix the h1 for /Blog being a bit messed up on smaller screens

--- a/PersonalWebsite/Styles/site-blogs.scss
+++ b/PersonalWebsite/Styles/site-blogs.scss
@@ -17,6 +17,7 @@ section.series {
     > h1 {
         border-bottom: 1px solid black;
         width: 900px;
+        max-width: 95%;
         padding-bottom: 0.8em;
         color: hsl(0, 0, 15%);
     }
